kubernetes/seller-console/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seller-console-ingress
  namespace: ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "ca-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - seller.local
    secretName: seller-local-tls
  rules:
  - host: seller.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seller-console
            port:
              number: 80
